--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.4",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
